# yaof

./: .gitignore  .npmrc  Cargo.toml  README.md  package.json  turbo.json
.github/workflows/: release.yml
crates/yaof-core/: Cargo.toml  build.rs
crates/yaof-core/permissions/: default.toml
crates/yaof-core/permissions/autogenerated/: reference.md
crates/yaof-core/permissions/autogenerated/commands/: close_overlay.toml  list_overlays.toml  overlay_exists.toml  overlay_set_always_on_top.toml  overlay_set_click_through.toml  overlay_set_visible.toml  overlay_update_geometry.toml  plugin_get.toml  plugin_install_local.toml  plugin_list.toml  plugin_settings_clear.toml  plugin_settings_delete.toml  plugin_settings_get.toml  plugin_settings_get_all.toml  plugin_settings_set.toml  plugin_settings_set_all.toml  plugin_uninstall.toml  service_broadcast.toml  service_list_providers.toml  service_register.toml  service_subscribe.toml  service_unregister.toml  service_unsubscribe.toml  spawn_overlay.toml
crates/yaof-core/permissions/schemas/: schema.json
crates/yaof-core/src/: autostart.rs  commands.rs  error.rs  lib.rs  settings.rs
crates/yaof-core/src/overlay/: manager.rs  mod.rs  platform.rs  window.rs
crates/yaof-core/src/plugin/: loader.rs  manager.rs  manifest.rs  mod.rs  native.rs
crates/yaof-core/src/services/: mod.rs
crates/yaof-core/src/services/system/: cpu.rs  desktop.rs  media.rs  mod.rs  network.rs  window.rs
crates/yaof-plugin/: Cargo.toml
crates/yaof-plugin/src/: abi.rs  context.rs  lib.rs
crates/yaof-runtime/: Cargo.toml  build.rs  tauri.conf.json
crates/yaof-runtime/capabilities/: default.json
crates/yaof-runtime/src/: embedded.rs  hot_reload.rs  lib.rs  main.rs  protocol.rs  tray.rs
plugins/core-settings/: index.html  overlay.json  package.json  tsconfig.json  vite.config.ts
plugins/core-settings/src/: App.tsx  index.css  main.tsx
plugins/core-settings/src/components/: dynamic-settings-form.tsx  ordered-field-list.tsx  overlay-settings-panel.tsx  plugin-card.tsx  sidebar.tsx
plugins/topbar/: components.json  eslilnt.config.mjs  index.html  overlay.json  package.json  tsconfig.json  vite.config.ts
plugins/topbar/src/: App.css  App.tsx  config.ts  main.tsx  types.ts  vite-env.d.ts
scripts/: build-runtime.ts  publish.ts
(+11 files in other folders)
