[workspace]
name = "yaof"
version = "0.1.0"
edition = "2024"
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tauri = { version = "2.9", features = ["tracing", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
